--- a/Naive Bayes/Naive Bayes Model.ipynb
+++ b/Naive Bayes/Naive Bayes Model.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Gender.csv')"
+    "data = pd.read_csv('Datasets/Gender.csv')"
    ]
   },
   {
@@ -474,7 +474,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x182d01cd280>"
+       "<seaborn.axisgrid.PairGrid at 0x1aad854c7c0>"
       ]
      },
      "execution_count": 11,
